[gd_scene load_steps=9 format=3 uid="uid://csx1b2pkuiepw"]

[ext_resource type="Script" uid="uid://b8uqqibftmvum" path="res://battler.gd" id="1_7jvhn"]
[ext_resource type="PackedScene" uid="uid://d2hj1n1kvsbpf" path="res://range_detection_component.tscn" id="5_5muag"]
[ext_resource type="PackedScene" uid="uid://cvihjhrrfteto" path="res://hitbox_component.tscn" id="5_8ey71"]
[ext_resource type="PackedScene" uid="uid://d1v65w1aur6h0" path="res://health_component.tscn" id="5_e88s5"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6qqko"]
radius = 1.0
height = 5.0

[sub_resource type="BoxShape3D" id="BoxShape3D_7jvhn"]
size = Vector3(2, 5, 2)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8ey71"]
radius = 1.0
height = 5.0

[sub_resource type="SphereShape3D" id="SphereShape3D_8njye"]
radius = 3.0

[node name="Battler" type="CharacterBody3D"]
script = ExtResource("1_7jvhn")
damage = 10

[node name="Pivot" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pivot"]
mesh = SubResource("CapsuleMesh_6qqko")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_7jvhn")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("parent", "health_component") instance=ExtResource("5_8ey71")]
parent = NodePath("..")
health_component = NodePath("../HealthComponent")
shape = SubResource("CapsuleShape3D_8ey71")

[node name="RangeDetectionComponent" parent="." node_paths=PackedStringArray("hitbox_component", "range_area") instance=ExtResource("5_5muag")]
hitbox_component = NodePath("../HitboxComponent")
range_area = NodePath("../RangeArea")

[node name="RangeArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RangeArea"]
shape = SubResource("SphereShape3D_8njye")
debug_color = Color(0.6804357, 0.2994788, 1, 0.41960785)

[node name="HealthComponent" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("5_e88s5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
parent = NodePath("..")

[node name="AttackTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
